# zmake-rust

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
src/: main.rs
src/api/: access_control.rs  build_constants.rs  engine.rs  file_finder.rs  id.rs  mod.rs  project.rs  project_file.rs  project_resolver.rs  target.rs  version_extractor.rs
src/api/build_constants/: builtin.rs
src/api/builtin/: c.rs  cpp.rs  mod.rs
zmake_cli/: Cargo.toml
zmake_cli/src/: main.rs
zmake_lib/: Cargo.toml  build.rs
zmake_lib/src/: configuration.rs  engine.rs  file_finder.rs  id.rs  lib.rs  make_builtin.rs  project_resolver.rs  tool.rs
zmake_lib/src/api/: access_control.rs  engine.rs  file_finder.rs  id.rs  make_builtin.rs  mod.rs  project.rs  project_resolver.rs  target.rs  version_extractor.rs
zmake_lib/src/api/builtin/: c.rs  cpp.rs  mod.rs
zmake_lib/src/builtin/: c.rs  cpp.rs  mod.rs
