[package]
name = "zmake"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
clap = { version = "4.5.51", features = ["derive","cargo","unicode","wrap_help"] }
semver = "1.0.27"
unicode-ident = "1.0.22"
thiserror = "2"
shadow-rs = "1.4"
clap_complete = "4.5.51"
cfg-if = "1.0.4"
num_cpus = "1.17.0"
v8 = "142.1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = "1.0"
serde_json = "1.0"

[build-dependencies]
shadow-rs = "1.4"
clap_complete = "4.5.51"
clap = { version = "4.5.51", features = ["derive","cargo","unicode","wrap_help"] }
