[package]
name = "zmake"
version = "0.1.0"
edition = "2024"
build = "build.rs"
repository = "https://github.com/moegodot/zmake-rust"
homepage = "https://github.com/moegodot/zmake-rust"
authors = ["MoeGodot <me@kawayi.moe>"]

[dependencies]
clap = { version = "4.5.51", features = ["derive","cargo","unicode","wrap_help"] }
semver =  { version = "1.0", features = ["serde"] }
unicode-ident = "1.0.22"
thiserror = "2"
shadow-rs = "1.4"
clap_complete = "4.5.51"
cfg-if = "1.0.4"
num_cpus = "1.17.0"
tracing = "0.1.41"
tracing-core = "0.1.34"
tracing-subscriber = "0.3.20"
serde = "1.0"
const_format = "0.2.35"
serde_json = "1.0"
ahash = "0.8.12"
argfile = "0.2"
lenient_semver = "0.4.2"
rustyscript = "0.12.3"

[build-dependencies]
shadow-rs = "1.4"
clap_complete = "4.5.51"
clap = { version = "4.5.51", features = ["derive","cargo","unicode","wrap_help"] }
