[workspace]
members = ["zmake_lib", "zmake_cli"]
resolver = "3"

[workspace.dependencies]
deno_core = { version = "0.355.0", features = ["include_icu_data"] }
deno_fs = "0.124.0"
deno_permissions = "0.73.0"

clap = { version = "4.5.51", features = [
    "derive",
    "cargo",
    "unicode",
    "wrap_help",
] }
semver = { version = "1.0", features = ["serde"] }
unicode-ident = "1.0.22"
thiserror = "2"
shadow-rs = "1.4"
clap_complete = "4.5.51"
cfg-if = "1.0.4"
num_cpus = "1.17.0"
tracing = "0.1.41"
tracing-core = "0.1.34"
tracing-subscriber = "0.3.20"
serde = "1.0"
const_format = "0.2.35"
serde_json = "1.0"
ahash = "0.8.12"
argfile = "0.2"
lenient_semver = "0.4.2"

opentelemetry_sdk = "0.31.0"
opentelemetry-stdout = "0.31.0"
tracing-opentelemetry = "0.32.0"

static_init = "1.0.4"

tokio = { version = "1.48.0", features = ["full"] }

tracing-attributes = "0.1.24"

glob = "0.3.3"

bitflags = "2.10.0"

strum = "0.27"
strum_macros = "0.27"

colorchoice-clap = "1.0.7"

eyre = "0.6"
color-eyre = "0.6"
colorchoice = "1.0.4"

exit-code = "1.0"

[workspace.package]
version = "0.1.0"
authors = ["MoeGodot <me@kawayi.moe>"]
description = "The post-modern building tool that your mom warned you about."
documentation = "https://github.com/moegodot/zmake-rust"
repository = "https://github.com/moegodot/zmake-rust"
homepage = "https://github.com/moegodot/zmake-rust"
edition = "2024"
license = "GPL-3.0-or-later"
