[package]
name = "zmake-cli"

build = "build.rs"

version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true

[[bin]]
name = "zmake"
path = "./src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
argfile.workspace = true
shadow-rs.workspace = true

tokio.workspace = true

const_format.workspace = true
exit-code.workspace = true

num_cpus.workspace = true
tracing.workspace = true

zmake-lib = { path = "../zmake_lib" }

eyre.workspace = true
color-eyre.workspace = true
colorchoice-clap.workspace = true
colorchoice.workspace = true

glob.workspace = true

tracing-subscriber.workspace = true

opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-stdout.workspace = true
tracing-opentelemetry.workspace = true

[features]
default = []

[build-dependencies]
shadow-rs.workspace = true
clap_complete.workspace = true
clap.workspace = true
