[package]
name = "zmake-lib"

version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
build = "build.rs"

[dependencies]
semver.workspace = true
thiserror.workspace = true
cfg-if.workspace = true
num_cpus.workspace = true

tracing.workspace = true
tracing-core.workspace = true
tracing-subscriber.workspace = true

serde.workspace = true
const_format.workspace = true
serde_json.workspace = true
ahash.workspace = true
lenient_semver.workspace = true

tokio.workspace = true

unicode-ident.workspace = true
eyre.workspace = true

glob.workspace = true

static_init.workspace = true

strum.workspace = true
strum_macros.workspace = true

tracing-attributes.workspace = true

v8.workspace = true

convert_case.workspace = true

[build-dependencies]
shadow-rs.workspace = true
clap_complete.workspace = true
clap.workspace = true
